# flux-gha-app

./: Dockerfile  index.yaml  pyproject.toml
.github/actions/app-test/: action.yaml
.github/actions/helm-lint-test/: action.yaml
.github/workflows/: deploy.yaml  helm.yaml  main.yaml  main.yml  pr.yaml  release.yaml
app/: main.py
charts/flux-gha-app/: Chart.yaml  values.yaml
charts/flux-gha-app/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  hpa.yaml  ingress.yaml  service.yaml  serviceaccount.yaml
charts/flux-gha-app/templates/tests/: test-connection.yaml
deploy/: deployment.yaml  service.yaml  serviceaccount.yaml
src/: main.py
tests/: test_main.py
