[tool.poetry]
name = "flux-gha-app"
version = "0.1.1"
description = ""
authors = ["Dmitry Kuleshov <vdksystem@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.109.0"
uvicorn = "^0.27.0.post1"
httpx = "^0.27.0"

[tool.poetry.group.dev.dependencies]
python-dotenv = "^1.0.1"


[tool.poetry.group.test.dependencies]
pytest = "^8.1.1"
coverage = "^7.4.4"
pytest-mock-resources = "^2.10.1"
pytest-env = "^1.1.3"

[tool.poetry.group.dev.dependencies]
python-dotenv = "^1.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.run]
branch = true
source = ["src"]
command_line = "-m pytest"

[tool.coverage.report]
show_missing = true

[tool.coverage.xml]
output = "coverage.xml"